--- a/encheres/encheres.css
+++ b/encheres/encheres.css
@@ -59,10 +59,42 @@
 		width: 100%;
 	}
 
-
-
 	span {
+		position: relative;
+	  }
+
+
+	.inconnu::after{
+		content: '';
+		display: block;
+		width: 100%;
+		height: 100%;
 		background-color: black;
+		border-radius: 3px;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
+	.score
+	{
+		text-align: center;
+		font-size: xx-large;
+		font-family: "Police1";
+	}
+
+	#actuel
+	{
+		color:red;
+	}
+
+	#actuel
+	{
+		color:green;
+	}
+
+	.justGuessed{
+		color:green;
 	}
 
 	.id {
