Front update theme, buttons...

--- a/intrus/intrus.css
+++ b/intrus/intrus.css
@@ -1,60 +1,1 @@
-/* Tableau */
-
-	table{
-	  	width:100%;
-		margin-left: auto;
-		margin-right: auto;
-		text-align: center;
-		font-family: Police4;
-	
-		}
-	
-
-	.tbl-header{
-		width:750px;
-		margin-top: 20px;
-		margin-left: auto;
-		margin-right: auto;
-		background-color: white;
-		filter: drop-shadow(0 0 0.75rem grey);
-	
-	}
-
-
-	.tbl-content{
-	  	height:auto;
-	 	overflow-x:auto;
-	 	margin-top: 0px;
-	  	padding-bottom: 20px;
-		}
-
-	th{
-	  padding: 20px 15px;
-	  text-align: left;
-	  font-weight: 500;
-	  color: #000;
-	  text-transform: uppercase;
-	}
-
-	td{
-	  padding: 15px;
-	  text-align: left;
-	  vertical-align:middle;
-	  font-weight: 300;
-	  font-size: 24px;
-	  color: #000;
-	  
-	}
-
-.manches {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 80px;
-}
-
-.colo {
-	text-align: center;
-	font-size: 20px;
-
-}
+button
