--- a/jeu_annees/jeu_annees.css
+++ b/jeu_annees/jeu_annees.css
@@ -1,187 +1,35 @@
-/* Les boutons */
-
-
-	#bouton1, #bouton2, #bouton3  {
-		width: 25%;
-		margin-bottom: 20px;
-		margin-left: 6.25%;
-		font-size: x-large;
+.generate  {
+	width: 25%;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: x-large;
+	position: center;
 		}	
 
-	#bouton4, #bouton5, #bouton6  {
-		width: 25%;
-		margin-top: 20px;
-		margin-bottom: 20px;
-		margin-left: 6.25%;
-		font-size: x-large;
-		}
+#container, #container2 {
+	margin-top: 10vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;;
+}
 
-	#ensemble_boutons{
-		margin-top: 20px;
-	}
-
-/* Tableau */
-	.limiter 
-		{width: 100%;
-	  margin: 0 auto;}
-
-	.container-table100 
-		{width: 100%;
-	  /*min-height: 100vh;*/
-
-	  display: -webkit-box;
-	  display: -webkit-flex;
-	  display: -moz-box;
-	  display: -ms-flexbox;
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  flex-wrap: wrap;
-	  padding: 20px 30px;}
-
-	.wrap-table100 
-		{
-	  width: 960px;
-	  border-radius: 10px;
-	  overflow: hidden;}
-
-	.table 
-		{
-	  width: 100%;
-	  display: table;
-	  margin: 0;
-		}
-
-	@media screen and (max-width: 768px) 
-		{
-	  .table {
-	    display: block;
-	  }
-		}
-
-	.row 
-		{
-	  display: table-row;
-		}
+#bouton_lancer {
+	
+	
+}
 
 
-	@media screen and (max-width: 768px) 
-		{
-	  .row {
-	    display: block;
-	  }
 
-	  .row.header {
-	    padding: 0;
-	    height: 0px;
-	  }
+select{
+  border:none;
+  padding: 10px 20px;
+  border-radius:5px;
+}
 
-	  .row.header .cell {
-	    display: none;
-	  }
-
-	  .row .cell:before {
-	    color: #808080;
-	    line-height: 1.2;
-	    text-transform: uppercase;
-	    font-weight: unset !important;
-
-	    margin-bottom: 13px;
-	    content: attr(data-title);
-	    min-width: 98px;
-	    display: block;
-	  }
-		}
-
-	.cell 
-		{
-	  display: table-cell;
-	  /**/
-		}
-
-	@media screen and (max-width: 768px) 
-		{
-	  .cell {
-	    display: block;
-	  }
-		}
-
-	.row .cell 
-		{
-	  line-height: 1.2;
-	  font-weight: unset !important;
-
-	  padding-top: 20px;
-	  padding-bottom: 20px;
-	  border-bottom: 1px solid #f2f2f2;
-		}
-
-	.row.header .cell 
-		{
-	  line-height: 1.2;
-	  font-weight: unset !important;
-
-	  padding-top: 19px;
-	  padding-bottom: 19px;
-		}
-
-	.row .cell:nth-child(1) 
-		{
-	  width: 30px;
-	  padding-left: 40px;
-		}
-
-	.row .cell:nth-child(2) 
-		{
-	  width: 160px;
-		}
-
-	.row .cell:nth-child(3) 
-		{
-	  width: 250px;
-		}
-
-	.row .cell:nth-child(4) 
-		{
-	  width: 190px;
-		}
-
-	.table, .row 
-		{
-	  width: 100% !important;
-	  /**/
-		}
+select:focus{
+  outline:none;
+}
 
 
-	@media (max-width: 768px) 
-		{
-	  .row {
-	    border-bottom: 1px solid #f2f2f2;
-	    padding-bottom: 18px;
-	    padding-top: 30px;
-	    padding-right: 15px;
-	    margin: 0;
-	  }
-	  
-	  .row .cell {
-	    border: none;
-	    padding-left: 30px;
-	    padding-top: 16px;
-	    padding-bottom: 16px;
-	  }
-	  .row .cell:nth-child(1) {
-	    padding-left: 30px;
-	  }
-	  
-	  .row .cell {
-	    color: #555555;
-	    line-height: 1.2;
-	    font-weight: unset !important;
-	  }
+/* ================================== */
 
-	  .table, .row, .cell {
-	    width: 100% !important;
-	  }
-		}
-
-	/* Fin du tableau */
