--- a/encheres/encheres.css
+++ b/encheres/encheres.css
@@ -11,6 +11,7 @@
 		display: flex;
 		align-items: center;
 		align-content: center;
+		flex-direction:column;
 	}
 /* Affichage du nombre de questions manquantes */
 
@@ -76,21 +77,9 @@
 		left: 0;
 	}
 
-	.score
+	.invisible
 	{
-		text-align: center;
-		font-size: xx-large;
-		font-family: "Police1";
-	}
-
-	#actuel
-	{
-		color:red;
-	}
-
-	#actuel
-	{
-		color:green;
+		display: none;
 	}
 
 	.justGuessed{
