--- a/image/image.css
+++ b/image/image.css
@@ -8,49 +8,90 @@
 		margin-bottom: 20px;
 	}
 
-	#image {
-		box-shadow: 2px 2px 5px;
-		margin-left: auto;
-		margin-right: auto;
-		width: 70%;
+	#bloc_image {
+		display: flex;
+		justify-content: center;
+		height: 50vh;
+	  }
+	
+	  #bloc_image #image {
+		background-color: white;
+		border: 25px solid #B88846;
+		border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
+		/* box-shadow: 10px 10px 5px grey; */
+		filter: drop-shadow(0 0 0.75rem crimson);
 	}
 	
-
-	.resultat, .affichage_solution {	
+	.center {
 		display: flex;
-		align-items: center;
-		justify-content: center;
-		margin-top: 20px;
-		;}
+		align-items: flex-start;
+		justify-content: space-around;
+		font-family: Police10;
 
-	.affichage_solution {
-		margin-top: 20px;
-		color: #000;
-		font-family: bold;
-		font-size: 100px;
-		font-family: Police8;
-		text-align: center;
-	}
+	  }
+	  
+	  .btn {
+		width: 30vw;
+		height: 40px;
+		cursor: pointer;
+		border: 2px solid black;
+		background-color: #97bc82;
+		border-radius: 50% 20% / 10% 40%;
+		outline: none;
+		transition: 0.2s ease-in-out;
+	  }
 
-	.question {
+	  .btns {
+		cursor: pointer;
+		border: 2px solid black;
+		background-color: #97bc82;
+		border-radius: 50% 20% / 10% 40%;
+		outline: none;
+		transition: 1s ease-in-out;
+	  }
+	  
+	
+	  svg {
+		position: absolute;
+		left: 0;
+		top: 0;
+		fill: none;
+		stroke: #fff;
+		stroke-dasharray: 150 480;
+		stroke-dashoffset: 150;
+		transition: 1s ease-in-out;
+	  }
+	  
+	  .btn:hover {
+		transition: 0.5s ease-in-out;
+		background: #506751;
+	  }
+	  
+	  .btn:hover svg {
+		stroke-dashoffset: -480;
+	  }
+	  
+	  .btn span {
 		color: black;
-		background-color: white;
-		filter: drop-shadow(0 0 0.75rem grey);
-		padding: 2em;
-		margin-left: 5%;
-		margin-right: 5%;
+		font-family: Police10;
+		font-size: 30px;
+		padding-top: 1vh;
+		padding-bottom: 1vh;
+	
+	  }
+	
+	  .btn:hover span {
+		transition: 0.5s ease-in-out;
+		color: white;
+	  }
 
-	}
+	  #container, #containerreponse{
+		margin:2vh;
+		}
 
-
-
-/* Page précédente & Page suivante */
-
-	.navigation {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		margin-bottom: 20px;
-	}
-
+	#affichage_reponse {
+		font-family: Police10;
+		display: inline-flex;
+		padding: 20px;
+	  }
 	
