--- a/questions_indiv/questions_indiv.css
+++ b/questions_indiv/questions_indiv.css
@@ -1,7 +1,6 @@
 /* Enonce des règles */
 
 	.texte{
-		margin-top: 30px;
 		text-align: left;
 		margin-left: 10px;
 		font-weight: bolder;
@@ -10,12 +9,16 @@
 
 /* Afficher la question et la réponse*/
 
-	.bouton {
-		margin-top: 20px;
-	}
 
 	.question, .reponse{
 		color: #000;
+		font-size: x-large;
+		text-align: center;
+
+	}
+
+	.reponse{
+		color: #315146;
 		font-size: x-large;
 		text-align: center;
 
@@ -39,15 +42,13 @@
 		background-color: white;
 		filter: drop-shadow(0 0 0.75rem grey);
 		padding: 5px;
-		font-family: Police2;
-		width: 50%;		
+		font-family: Police10;
 		line-height: normal;
-		width: 60%;
+		width: 80%;
 		margin-left: auto;
 		margin-right: auto;
 		
 	}
-
 
 
 /* Couleur des cases par joueur */
@@ -58,30 +59,25 @@
 		font-size: x-large;
 		margin-bottom: 20px;
 		width: 20%;
-		padding: 10px 0px;
 		margin-right: 2%;
 		margin-left: 2%;
-		border: none;
-		border-radius: 10px;
 		box-shadow: 5px 5px 5px grey;
 		outline: none;
-		padding: 10px;
 		font-family: Police2;
 		
 	}
 
-	.joueurs {
+	.joueurs, .contenu_reponse {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin-top: 20px;
-		margin-bottom: 10px;
 		
 	}
 
 	.cellule {
 		font-family: Police4;
 		font-size: 20px;
+		border: 2px solid black;
 	}
 
  	#papa {
@@ -103,28 +99,80 @@
 		background-color: #67A580;}
 
 
-	#id2, #id7, #id12, #id20 {
+	#id18, #id2, #id14, #id12 {
 		background-color: #CB4483;
 		color: white;
 	}
 
-	#id3, #id5,#id13, #id14 {
+	#id17, #id3, #id9, #id20 {
 		background-color: #F6E472;
 		color: white;
 	}
 
-	#id1, #id6, #id11, #id18 {
+	#id1, #id5, #id11, #id7 {
 		background-color: #FCAE86;
 		color: white;
 	}
 
 
-	#id8, #id9, #id10, #id15 {
+	#id8, #id4, #id10, #id15 {
 		background-color: #92A0CF;
 		color: white;
 	}
 
-	#id4, #id16, #id17, #id19 {
+	#id6, #id13, #id16, #id19 {
 		background-color: #67A580;
 		color: white;
 	}
+
+	.btn {
+		width: 300px;
+		height: 50px;
+		cursor: pointer;
+		background: transparent;
+		background-color: #97bc82;
+		border-radius: 50% 20% / 10% 40%;
+		outline: none;
+		border: 2px solid black;
+		transition: 1s ease-in-out;
+		margin-bottom: 5vh;
+	  }
+	  
+	
+	  svg {
+		position: absolute;
+		left: 0;
+		top: 0;
+		fill: none;
+		stroke: #fff;
+		stroke-dasharray: 150 480;
+		stroke-dashoffset: 150;
+		transition: 1s ease-in-out;
+	  }
+	  
+	  .btn:hover {
+		transition: 0.5s ease-in-out;
+		background: #506751;
+	  }
+	  
+	  .btn:hover svg {
+		stroke-dashoffset: -480;
+	  }
+	  
+	  .btn span {
+		color: black;
+		font-family: Police10;
+		font-size: 18px;
+		font-weight: 100;
+	  }
+	
+	  .btn:hover span {
+		transition: 0.5s ease-in-out;
+		color: white;
+	  }
+	
+	  #bloc_image {
+		display: flex;
+		justify-content: center;
+		height: 50vh;
+	  }
