[Intrus] Change (pas fini)

--- a/intrus/intrus.css
+++ b/intrus/intrus.css
@@ -1,1 +1,74 @@
-button
+/* Tableau */
+
+table{
+    width:70vw;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: Police4;
+    }
+
+.bouton{
+    width: 140px;
+	height: 40px;
+	cursor: pointer;
+	background: transparent;
+	border: 2px solid black;
+	background-color: #97bc82;
+	border-radius: 50% 20% / 10% 40%;
+	outline: none;
+	transition: 1s ease-in-out;
+}
+
+
+.tblheader{
+    width:750px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    filter: drop-shadow(0 0 0.75rem grey);
+
+}
+
+
+.tblcontent{
+    height:auto;
+    overflow-x:auto;
+    margin-top: 0px;
+    padding-bottom: 20px;
+    }
+
+th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    color: #000;
+    text-transform: uppercase;
+}
+
+td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 24px;
+    color: #000;
+    border: 2px solid black;
+}
+
+td:hover {
+    background: white;}
+
+.manches {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 80px;
+}
+
+.colo {
+text-align: center;
+font-size: 10px;
+
+}
