--- a/frise/frise.css
+++ b/frise/frise.css
@@ -18,11 +18,12 @@
 
 	.nom_equipe 
 		{
-		font-size: xx-large;
-		font-family: Police9;
+		font-size: x-large;
+		font-family: Police10;
+		font-weight: bold;
 		color: #000;
 		text-align: center;
-		width: 50%;	
+		width: 80%;	
 		margin-left: auto;
 		margin-right: auto;	
 	}
@@ -152,3 +153,10 @@
 		align-items: center;
 		align-content: center;		
 		}
+
+	.bouton:hover {
+		transition: 0.5s ease-in-out;
+		background: #506751;
+		cursor: pointer;
+	}
+		
