--- a/avant-apres/avant-apres.css
+++ b/avant-apres/avant-apres.css
@@ -1,184 +1,45 @@
-/* Boutons */
-
-	.bouton {
+#container2{
+	margin: 5vh;
 	display: flex;
 	align-items: center;
+	justify-content: center;
+}
+
+.generate  {
+	width: 25%;
 	margin-left: auto;
 	margin-right: auto;
-	align-content: center;
-	}
+	font-size: x-large;
+	position: center;
+		}	
 
-/* Tableau */
-	.limiter 
-		{
-			width: 100%;
-			margin: 0 auto;
-			font-family: Police2;
+center {
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-around;
+	}	
 
-	;}
+svg {
+	position: absolute;
+	left: 0;
+	top: 0;
+	fill: none;
+	stroke: #fff;
+	stroke-dasharray: 150 480;
+	stroke-dashoffset: 150;
+	transition: 1s ease-in-out;
+  }
+  
+  #bloc_image {
+	display: flex;
+	justify-content: center;
+	height: 50vh;
+  }
 
-	.container-table100 
-		{width: 100%;
-	  /*min-height: 100vh;*/
-
-	  display: -webkit-box;
-	  display: -webkit-flex;
-	  display: -moz-box;
-	  display: -ms-flexbox;
-	  display: flex;
-	  align-items: center;
-	  justify-content: center;
-	  flex-wrap: wrap;
-	  padding: 20px 30px;}
-
-	.wrap-table100 
-		{
-	  width: 960px;
-	  border-radius: 10px;
-	  overflow: hidden;}
-
-	.table 
-		{
-		width: 100%;
-		display: table;
-		margin: 0;
-		
-		}
-
-	@media screen and (max-width: 768px) 
-		{
-	  .table {
-	    display: block;
-	  }
-		}
-
-	
-
-	@media screen and (max-width: 768px) 
-		{
-	  .row {
-	    display: block;
-	  }
-
-	  .row.header {
-	    padding: 0;
-	    height: 0px;
-	  }
-
-	  .row.header .cell {
-	    display: none;
-	  }
-
-	  .row .cell:before {
-	    color: #808080;
-	    line-height: 1.2;
-	    text-transform: uppercase;
-	    font-weight: unset !important;
-
-	    margin-bottom: 13px;
-	    content: attr(data-title);
-	    min-width: 98px;
-	    display: block;
-	  }
-		}
-
-	.cell 
-		{
-	  display: table-cell;
-	  /**/
-		}
-
-	@media screen and (max-width: 768px) 
-		{
-	  .cell {
-	    display: block;
-	  }
-		}
-
-	.row .cell 
-		{
-	  color: #666666;
-	  line-height: 1.2;
-	  font-weight: unset !important;
-
-	  padding-top: 20px;
-	  padding-bottom: 20px;
-	  border-bottom: 1px solid #f2f2f2;
-		}
-
-	.row.header .cell 
-		{
-	  color: #fff;
-	  line-height: 1.2;
-	  font-weight: unset !important;
-
-	  padding-top: 19px;
-	  padding-bottom: 19px;
-		}
-
-	.row .cell:nth-child(1) 
-		{
-	  width: 30px;
-	  padding-left: 40px;
-		}
-
-	.row .cell:nth-child(2) 
-		{
-	  width: 160px;
-		}
-
-	.row .cell:nth-child(3) 
-		{
-	  width: 250px;
-		}
-
-	.row .cell:nth-child(4) 
-		{
-	  width: 190px;
-		}
-
-	.table, .row 
-		{
-	  width: 100% !important;
-	  /**/
-		}
-
-	.row:hover 
-		{
-	 
-	  cursor: pointer;
-		}
-
-	@media (max-width: 768px) 
-		{
-	  .row {
-	    border-bottom: 1px solid #f2f2f2;
-	    padding-bottom: 18px;
-	    padding-top: 30px;
-	    padding-right: 15px;
-	    margin: 0;
-	  }
-	  
-	  .row .cell {
-	    border: none;
-	    padding-left: 30px;
-	    padding-top: 16px;
-	    padding-bottom: 16px;
-	  }
-	  .row .cell:nth-child(1) {
-	    padding-left: 30px;
-	  }
-	  
-	  .row .cell {
-	    color: #555555;
-	    line-height: 1.2;
-	    font-weight: unset !important;
-	  }
-
-	  .table, .row, .cell {
-	    width: 100% !important;
-	  }
-		}
-
-	/* Fin du tableau */
-
+  #bloc_image #image {
+	background-color: white;
+	border: 25px solid #B88846;
+	border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
+	/* box-shadow: 10px 10px 5px grey; */
+	filter: drop-shadow(0 0 0.75rem crimson);
+}
