--- a/questions_a_theme/questions_a_theme.css
+++ b/questions_a_theme/questions_a_theme.css
@@ -1,91 +1,125 @@
-/* Thèmes*/
-
-	.theme{
-		margin-top: 20px;
-		color: black;
-		font-size: x-large;
-		margin-bottom: 20px;
-		width: 20%;
-		padding: 10px 0px;
-		margin-right: 2%;
-		margin-left: 2%;
-		border: none;
-		border-radius: 10px;
-		box-shadow: 5px 5px 5px grey;
-		outline: none;
-		padding: 10px;
-		font-family: Police2;
-	}
-
-	.enonce_regles {
-		margin-left: 10%;
-		margin-right: 10%;
-	}
-
-
-/* Boutons */
-	.bouton_reponse {
-		margin-top: 20px;
-		text-align: center;
-		display: flex;
-		align-items: center;
-		align-content: center;}
-		
-	.cellule {
-		font-family: Police4;
-		font-size: 60px;
-	}
-
-	.contenu_reponse {
-		color: #000;
-		font-size: x-large;
-		line-height: 2em;
-		text-align: center;
-		background-color: white;
+/*Contenant du bouton réponse */
+	.contenu_reponse {		
 		filter: drop-shadow(0 0 0.75rem grey);
-		padding: 5px;
-		font-family: Police2;
-		width: 70%;
-		margin-top: 50px;
-		margin-left: auto;
-		margin-right: auto;
 	}
 
 /* Couleur des cases par joueur */
 
-	#papa, #id3, #id8, #id12, #id4 {
+	#papa, #id2, #id5, #id11, #id14 {
 		background-color: #CB4483;
 	}
 
-	#sam, #id6, #id7, #id15, #id10{
+	#sam, #id7, #id9, #id16, #id18{
 		background-color: #fdf1b8;
 		
 	}
 
-	#maman, #id1, #id2, #id13, #id18  {
+	#maman, #id3, #id6, #id12, #id15  {
 		background-color: #FCAE86;
 	}
 
-	#aitor, #id5, #id9, #id11, #id19 {
+	#aitor, #id1, #id4, #id13, #id20 {
 		background-color: #92A0CF;
 	}
 
-	#zaz, #id14, #id16, #id17, #id20 {
+	#zaz, #id8, #id10, #id17, #id19{
 		background-color: #67A580;
 	}
 
-/* Question & Réponse */
+/* Style des boutons */
 
-	.texte{
-		margin-top: 30px;
-		font-weight: bolder;
-		font-size: xx-large;
+.btn {
+	width: 300px;
+	height: 50px;
+	cursor: pointer;
+	background-color: #97bc82;
+	border-radius: 50% 20% / 10% 40%;
+	outline: none;
+	border: 2px solid black;
+	transition: 1s ease-in-out;
+	margin-bottom: 5vh;
+  }
+  
+
+  .btn:hover {
+	transition: 0.5s ease-in-out;
+	background: #506751;
+  }
+  
+  .btn:hover svg {
+	stroke-dashoffset: -480;
+  }
+  
+  .btn span {
+	color: black;
+	font-family: Police10;
+	font-size: 18px;
+	font-weight: 100;
+  }
+
+  .btn:hover span {
+	transition: 0.5s ease-in-out;
+	color: white;
+  }
+
+
+/* Afficher la question et la réponse*/
+
+	.question{
+		color: #000;
+		font-size: x-large;
+		text-align: center;
+
 	}
 
-.bloc_themes {
-	margin-left: auto;
-	margin-right: auto;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
+	.reponse{
+		color: #315146;
+		font-size: x-large;
+		text-align: center;
+
+	}
+
+/* Bloc questions et réponses*/
+	.question_reponse {
+		background-color: white;
+		filter: drop-shadow(0 0 0.75rem grey);
+		padding: 5px;
+		font-family: Police10;
+		line-height: normal;
+		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
+		
+	}
+
+
+/* Couleur des cases par joueur */
+
+	.joueur{
+		margin-top: 0px;
+		color: black;
+		font-size: x-large;
+		margin-bottom: 20px;
+		width: 20%;
+		margin-right: 2%;
+		margin-left: 2%;
+		box-shadow: 5px 5px 5px grey;
+		outline: none;
+		font-family: Police2;
+		
+	}
+
+/* Blocs légende et bouton solution */
+	.joueurs, .contenu_reponse {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+	}
+
+/* Affichage des numéros */
+	.cellule {
+		font-family: Police4;
+		font-size: 20px;
+		border: 2px solid black;
+	}
