--- a/intrus/intrus.css
+++ b/intrus/intrus.css
@@ -18,21 +18,25 @@ table{
 	border-radius: 50% 20% / 10% 40%;
 	outline: none;
 	transition: 1s ease-in-out;
+    font-size:medium;
+    padding:0;
 }
 
-
-.tblheader{
-    width:750px;
-    margin-top: 20px;
+#nom_manche
+{
+    color: black;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
-    filter: drop-shadow(0 0 0.75rem grey);
-
+    margin-bottom: 5px;
+    font-family: Police10;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 140%;
 }
 
-
-.tblcontent{
+.tblcontent
+{
     height:auto;
     overflow-x:auto;
     margin-top: 0px;
@@ -47,28 +51,51 @@ th{
     text-transform: uppercase;
 }
 
+tr {
+    float: left;
+    display: flex;
+  flex-direction: column;
+  width:50%;
+  }
+
 td{
-    padding: 15px;
+    margin: 15px;
     text-align: left;
     vertical-align:middle;
     font-weight: 300;
     font-size: 24px;
     color: #000;
     border: 2px solid black;
+    background-color: rgb(239, 244, 230);
 }
 
-td:hover {
-    background: white;}
+tbody{
+    display: flex;
+}
+
+.invisible
+{
+    display: none;
+}
+
+.wrong
+{
+    background-color: #DE8273;
+}
+
+.right
+{
+    background-color: #A7BD9F;
+}
 
 .manches {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
 }
 
 .colo {
-text-align: center;
-font-size: 10px;
-
+    text-align: center;
+    font-size: 20px;
 }
