--- a/menu/homepage.css
+++ b/menu/homepage.css
@@ -44,6 +44,11 @@
         src: url('../polices/Police11.ttf');
     }
 
+    @font-face {
+        font-family: "Police12";
+        src: url('../polices/Police12.otf');
+    }
+
 html {
     background-image: linear-gradient(90deg, #ee2523 25%, #ffffff 25%, #ffffff 50%, #ee2523 50%, #ee2523 75%, #ffffff 75%, #ffffff 100%);
     background-size: 200.00px 200.00px;
@@ -108,8 +113,8 @@ html {
 
   .jeu
       {
-      height: 50vh;
-      width: 50vw;
+      height: 30vh;
+      width: 30vw;
       display: flex;
       justify-content: center;
       align-items: center;
