--- a/OPARI/poemes/poemes.css
+++ b/OPARI/poemes/poemes.css
@@ -1,88 +1,100 @@
-	.questions {
-		margin-left: 20px;
-		margin-top: 20px;
-		margin-top: 20px;
-		font-family: Police6;
-		background-color: white;
-		filter: drop-shadow(0 0 0.75rem grey);
-		padding: 2em;
-		width: 70%;
-		height: auto;
-		margin-left: auto;
-		margin-right: auto;
-		}
+#curves
+{
+	display:flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+.curve{
+	margin: 5px;
+	box-shadow: 1px 1px 5px gray;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 5px;
+	padding-bottom:40px;
+}
+
+#functions
+{
+	display:flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	max-height:15vh;
+	align-items:center;
+}
+
+.function{
+	width: fit-content;
+	font-family: Police12;
+	font-size: 18px;
+	letter-spacing: 1px;
+	border-spacing: 1rem;
+	max-width: 20vw;
+	text-align: center;
+	margin: 10px;
+}
+
+.questions {
+	font-family: Police6;
+	background-color: white;
+	display:flex;
+	flex-direction: column;
+	margin:20px;
+	}
+
+img {
+	width: 12vw;
+}
+
+.draggable:hover  {
+	box-shadow: 10px 5px 5px rgb(181, 181, 181);
+	border-radius: 30px;
+	cursor: pointer}
+
+.draggable:active  {
+	box-shadow: 10px 5px 5px pink;
+	border-radius: 30px;}
+
+
+
+.btn {
+	width: 300px;
+	height: 50px;
+	cursor: pointer;
+	background-color: #97bc82;
+	border-radius: 50% 20% / 10% 40%;
+	outline: none;
+	border: 2px solid black;
+	transition: 1s ease-in-out;
+	margin-bottom: 5vh;
+}
+
+
+.btn:hover {
+	transition: 0.5s ease-in-out;
+	background: #506751;
+}
+
+.btn:hover svg {
+	stroke-dashoffset: -480;
+}
+
+.btn span {
+	color: black;
+	font-family: Police10;
+	font-size: 18px;
+	font-weight: 100;
+}
+
+.btn:hover span {
+	transition: 0.5s ease-in-out;
+	color: white;
+}
+.contenu_reponse {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	
-	table {
-		font-family: Police2;
-		font-size: 2rem;
-		letter-spacing: 1px;
-		border-spacing:  1rem;
-	}
-
-	thead, tfoot {
-		background-color: rgb(228 240 245);
-	}
-
-	th {
-		border: 1px solid rgb(160 160 160);
-		width: 40%;
-		font-family: Police12;
-	}
-
-	td {
-		border: 1px solid rgb(160 160 160);
-		width: 40%;
-	}
-
-	img {
-		width: 10vw;
-	}
-
-	.image:hover  {
-		box-shadow: 10px 5px 5px grey;
-		border-radius: 30px;}
-
-	.image:active  {
-		box-shadow: 10px 5px 5px pink;
-		border-radius: 30px;}
-
-
-	.btn {
-		width: 300px;
-		height: 50px;
-		cursor: pointer;
-		background-color: #97bc82;
-		border-radius: 50% 20% / 10% 40%;
-		outline: none;
-		border: 2px solid black;
-		transition: 1s ease-in-out;
-		margin-bottom: 5vh;
-	}
-	
-	
-	.btn:hover {
-		transition: 0.5s ease-in-out;
-		background: #506751;
-	}
-	
-	.btn:hover svg {
-		stroke-dashoffset: -480;
-	}
-	
-	.btn span {
-		color: black;
-		font-family: Police10;
-		font-size: 18px;
-		font-weight: 100;
-	}
-	
-	.btn:hover span {
-		transition: 0.5s ease-in-out;
-		color: white;
-	}
-	.contenu_reponse {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		
-	}
+}
